--- a/AcademyCoreAPI/appsettings.json
+++ b/AcademyCoreAPI/appsettings.json
@@ -2,8 +2,11 @@
 
   "ConnectionStrings": {
 
-    "DefaultConnection": "data source=Sujeeb-Neema;initial catalog=dbAcademy;user id=sa;password=password07;MultipleActiveResultSets=True;"
+    "DefaultConnection": "data source=Anish-Neema;initial catalog=dbAcademy;user id=sa;password=password07;MultipleActiveResultSets=True;"
     //"DefaultConnection": "data source=DESKTOP-2SU7OB2\\SQLEXPRESS;initial catalog=dbAcademy;user id=sa;password=dbsecret!@#123;MultipleActiveResultSets=True;"
 
+  },
+  "AppSettings": {
+    "Secret": "SaitamaOnePunchMan"
   }
 }
