--- a/AcademyCoreAPI/Properties/launchSettings.json
+++ b/AcademyCoreAPI/Properties/launchSettings.json
@@ -14,7 +14,7 @@
         "ASPNETCORE_ENVIRONMENT": "Development"
       },
       "launchBrowser": true,
-      "launchUrl": "http://localhost:3990/api/User"
+      "launchUrl": ""
     },
     "AcademyCoreAPI": {
       "applicationUrl": "http://localhost:3990/",
@@ -23,7 +23,7 @@
         "ASPNETCORE_ENVIRONMENT": "Development"
       },
       "launchBrowser": true,
-      "launchUrl": "http://localhost:3990/api/students"
+      "launchUrl": "http://localhost:3990"
     }
   }
 }
