--- a/AcademyCoreAPI/appsettings.json
+++ b/AcademyCoreAPI/appsettings.json
@@ -1,6 +1,6 @@
 ﻿{
   "ConnectionStrings": {
-    "DefaultConnection": "data source=Sujeeb-Neema;initial catalog=dbAcademy;user id=sa;password=password07;MultipleActiveResultSets=True;"
+    "DefaultConnection": "data source=Anish-Neema;initial catalog=dbAcademy;user id=sa;password=password07;MultipleActiveResultSets=True;"
   },
   "AppSettings": {
     "Secret": "SaitamaOnePunchMan"
