--- a/AcademyCoreAPI/appsettings.json
+++ b/AcademyCoreAPI/appsettings.json
@@ -2,7 +2,9 @@
   "ConnectionStrings": {
     //"DefaultConnection": "data source=Anish-Neema;initial catalog=dbAcademy;user id=sa;password=password07;MultipleActiveResultSets=True;",
 
-    "DefaultConnection": "data source=sujeeb-Neema;initial catalog=dbAcademy;user id=sa;password=password07;MultipleActiveResultSets=True;"
+    //"DefaultConnection": "data source=sujeeb-Neema;initial catalog=dbAcademy;user id=sa;password=password07;MultipleActiveResultSets=True;",
+    "DefaultConnection": "data source=DESKTOP-2SU7OB2\\SQLEXPRESS;initial catalog=dbAcademy;user id=sa;password=dbsecret!@#123;MultipleActiveResultSets=True;"
+
   },
   "AppSettings": {
     "Secret": "SaitamaOnePunchMan"
